--- a/FOG/GitExpertBundle/composer.json
+++ b/FOG/GitExpertBundle/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "friendsofgit/gitexpert-bundle",
     "description": "Provides some commands and other stuff to ease the work with git and a Symfony project.",
+    "keywords" : ["git", "team"],
     "require": {
         "php": ">=5.3.0"
     },
